# araucx_brazil_fiscal_docs

./: .gitignore  pyproject.toml
.github/workflows/: release.yml  tests.yml
abrazilfiscalreport/: cli.py  generate_qrcode.py  pdf_element.py  utils.py
abrazilfiscalreport/dacce/: __init__.py  config.py  dacce.py
abrazilfiscalreport/dacte/: __init__.py  config.py  dacte.py  dacte_conf.py
abrazilfiscalreport/damdfe/: __init__.py  config.py  damdfe.py  damdfe_conf.py
abrazilfiscalreport/danfe/: __init__.py  config.py  danfe_basic_field.py  danfe_block.py  danfe_code.py  danfe_conf.py  danfe_ident_info.py  danfe_verification_msg.py  models.py
abrazilfiscalreport/danfse/: __init__.py  config.py  danfse.py  danfse_conf.py  municipios_ibge.csv
brazilfiscalreport/: xfpdf.py
brazilfiscalreport/dacte/: config.py  dacte.py
brazilfiscalreport/damdfe/: __init__.py
brazilfiscalreport/danfe/: config.py  danfe.py  danfe_emit_info.py
brazilfiscalreport/danfse/: __init__.py  config.py
tests/: test_cli.py  test_dacce.py  test_dacte.py  test_damdfe.py  test_danfe.py  test_danfse.py  test_utils.py  test_xfpdf.py
tests/fixtures/dacce/: xml_cce_cte_1.xml
tests/fixtures/dacte/: cte_from_root_test.xml
