[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["abrazilfiscalreport*"]

[tool.setuptools.package-data]
"abrazilfiscalreport.danfse" = ["*.png", "*.csv"]

[project]
name = "abrazilfiscalreport"
dynamic = ["version"]
description = "Python library for generating Brazilian auxiliary fiscal documents in PDF from XML documents."
authors = [{ name = "Engenere" }]
keywords = [
    "nfe", "nf-e", "danfe", "cte", "ct-e", "dacte", "mdfe", "mdf-e", "damdfe",
    "cce", "cc-e", "dacce", "nfse", "nfs-e", "danfse",
    "xml", "pdf", "sefaz", "brazil", "brasil", "nota-fiscal-eletronica",
    "documento", "fiscal", "auxiliar", "converter", "generator"
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "fpdf2>=2.8.3",
    "phonenumbers",
    "python-barcode"
]

# DACTE specific dependencies
[project.optional-dependencies]
dacte = [
    "qrcode",
]
# DAMDFE specific dependencies
damdfe = [
    "qrcode",
]
# DANFSE specific dependencies
danfse = [
    "qrcode",
]
# Dependencies CLI
cli = [
    "click",
    "PyYAML",
]


[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/saulojb/araucx_brazil_fiscal_docs"

[project.scripts]
abfrep = "abrazilfiscalreport.__main__:cli"

[tool.setuptools.dynamic]
version = {attr = "abrazilfiscalreport.__version__"}

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-comprehensions
    "C4",
    # isort
    "I",
]

isort = { known-first-party = ['abrazilfiscalreport', 'test'] }

[tool.doc8]
max-line-length = 88
